Thu Dec 11 15:32:31 1997  Ian Lance Taylor  <ian@cygnus.com>

	Generalize buffering code used by Kerberos encryption routines
	into a generic packetizing buffer.  The new code in buffer.c is a
	modified version of the code removed from server.c.
	* buffer.c (struct packetizing_buffer): Define.
	(packetizing_buffer_initialize): New function.
	(packetizing_buffer_input): New static function.
	(packetizing_buffer_output): New static function.
	(packetizing_buffer_flush): New static function.
	(packetizing_buffer_block): New static function.
	(packetizing_buffer_shutdown): New static function.
	* buffer.h (packetizing_buffer_initialize): Declare.
	* server.c (struct krb_encrypt_data): Rename from
	krb_encrypt_buffer, and remove all fields not related to
	encryption.
	(krb_encrypt_buffer_initialize): Just call
	packetizing_buffer_initialize.
	(krb_encrypt_input): New static function.
	(krb_encrypt_output): New static function.
	(krb_encrypt_buffer_input): Remove.
	(krb_encrypt_buffer_output): Remove.
	(krb_encrypt_buffer_flush): Remove.
	(krb_encrypt_buffer_block): Remove.
	(krb_encrypt_buffer_shutdown): Remove.

Wed Dec 10 15:39:44 1997  Ian Lance Taylor  <ian@cygnus.com>

	* buffer.c (stdio_buffer_initialize): Correct formatting.

Sun Dec  7 09:37:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb-0d0): New test, for checkout on existing
	directory.

Sat Dec  6 00:25:11 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (binwrap3): Clean up repository too.  Clean up working
	directory with "rm -r" not "rm -rf".

Thu Dec  4 17:11:18 1997  Larry Jones  <larry.jones@sdrc.com>

	* subr.c (check_numeric): Don't reference argv[1] when argc is 1
	(should be argv[0]).

	* sanity.sh: Fix lines that look like conflict markers but aren't
	to prevent problems checking in.
	(binwrap3): Remove local CVSROOT when done so that later
	tests that expect to create it don't fail.

Thu Dec  4 18:19:21 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
